--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,7 @@
 }
 html, body { height: 100%; }
 
-body { font: 16px Helvetica, Arial; }
+body { font: 16px Helvetica, Arial; background: #262626; }
 
 main { 
 	display: flex;
@@ -22,60 +22,77 @@ main {
 	margin:1% auto;
 	background:pink;
 }
-.form-container, .messages { padding: 20px; }
-.form-container { 
-	background-color: #e3edf1;
-	label { display: block; margin-bottom: 0.5rem; }
+.messages { padding: 20px; }
+
+.form-container {
+	height: 80px;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto auto;
+    width: 80%;
+    margin: 0 auto;
 }
 .messages { 
-	background-color: #edf6fa;
-	max-height: 300px;
-    min-height: 300px;
+	grid-column: 1;
+    background-color: #454a52;
+    max-height: 300px;
+    min-height: 500px;
     overflow: auto;
-	display: block;
-	border: 1px solid #bfcfd6;
+    display: block;
+	border-radius: 5px;
+	-webkit-box-shadow: -5px -5px 14px -9px rgba(29,31,36.54);
+	-moz-box-shadow: -5px -5px 14px -9px rgba(29,31,36.54);
+	box-shadow: -5px -5px 14px -9px rgba(29,31,36.54);
 }
-
+#nickname {
+		width: 100%;
+		top: 6%;
+		position: relative;
+		grid-row: 1;
+		height: 87%;
+		grid-column: 1;
+		border: none;
+}
+#message {
+	grid-column: 1/7;
+    width: 100%;
+}
 input, textarea { 
 	display: block; 
 	width: 100%;
-	border: 2px solid #bfcfd6;
-	//border-color: #bfcfd6; 
 	border-radius: 4px; 
 	font-size: 0.8rem; 
 	padding: 0.4rem; 
-	border-style: solid;
 }
 
-textarea { height: 135px; }
-
-
+textarea { min-height: 75px;  max-height: 150px; resize: none;}
 
 form {
-	//background: #000;
-	padding: 3px;
-	margin: 12px auto;
-
 	input[type=submit] { 
-		width: auto; 
-		padding: 10px; 
-		background-color: rgb(75, 200, 17);
-		margin-top: 1rem; 
-		border-radius: 8px;
-		color: white;
+		height: 100%;
+		border: none;
+		margin-left: 4%;
+		align-self: center;
+		background-color: #5684de;
+		color: #fff;
 		cursor: pointer;
 		text-transform: uppercase;
 		font-weight: bold;
+		grid-column: 7;
 	}
 }
 
 #messages {
 	list-style-type: none; margin: 0; padding: 0;
-
 	li { padding: 5px 10px;	}
 	li:nth-child(odd) { background: #eee; }
 }
-
+#msg-container {
+	display: grid;
+    grid-row: 1;
+    grid-column: 2/7;
+	width: 100%;
+	margin: 1%;
+}
 // imports
 
 @import 'modules/_message';
